[package]
authors = ["SAPikachu <sapikachu@gmail.com>"]
description = "Recursive DNS resolver"
homepage = "https://github.com/SAPikachu/euphonium"
keywords = ["dns", "recursive", "mioco"]
license = "MPL-2.0"
name = "euphonium"
readme = "README.md"
repository = "https://github.com/SAPikachu/euphonium"
version = "0.1.0"

[dependencies]
byteorder = "0.5.*"
chrono = { version = "0.3", features = ["serde"] }
docopt = "^0.7.0"
env_logger = "*"
itertools = "*"
log = "*"
macro-attr = "*"
mio = "^0.5.1"
mioco = "*"
newtype_derive = "0.1.*"
parking_lot = "^0.4"
quick-error = "^1.2"
rand = "*"
serde = "^1.0"
serde_json = "*"
serde_yaml = "^0.7"
serde_derive = "*"
time = "*"
treebitmap = { git = "https://github.com/sopium/treebitmap.git" }
trust-dns = "^0.10"
yaml-rust = "*"
lazy_static = "*"

[dev-dependencies]
rustc-serialize = "*"
timebomb = { git = "https://github.com/SAPikachu/timebomb.git" } 

[replace]
"serde_yaml:0.7.0" = { git = "https://github.com/SAPikachu/serde-yaml.git" }
"docopt:0.7.0" = { git = "https://github.com/docopt/docopt.rs.git" }
"trust-dns:0.10.2" = { path = "../trust-dns/client" }

[lib]
name = "eulib"
path = "src/lib.rs"
