[package]
authors = ["SAPikachu <sapikachu@gmail.com>"]
description = "Recursive DNS resolver"
homepage = "https://github.com/SAPikachu/euphonium"
keywords = ["dns", "recursive", "mioco"]
license = "MPL-2.0"
name = "euphonium"
readme = "README.md"
repository = "https://github.com/SAPikachu/euphonium"
version = "0.1.0"
edition = "2018"

[dependencies]
byteorder = "0.5.*"
chrono = "^0.4"
data-encoding = "^1.2.0"
docopt = "^0.8.1"
env_logger = "*"
itertools = "^0.8"
log = "*"
macro-attr = "*"
mio = "^0.5.1"
mioco = { git = "https://github.com/dpc/mioco.pre-0.9.git", rev = "23484def102216b3cfc09af4e3a9b15d622dc77e" }
newtype_derive = "0.1.*"
nix = "0.8.1"
openssl = { version = "^0.10", features = ["v102", "v110"], optional = true }
parking_lot = "^0.4"
privdrop = "0.1.3"
quick-error = "1.2.3"
rand = "*"
serde = "^1.0.27"
serde_json = "*"
serde_yaml = "=0.7.3"
serde_derive = "*"
time = "*"
treebitmap = { git = "https://github.com/sopium/treebitmap.git" }
#trust-dns = { version = "^0.20", default-features = false }
trust-dns-proto = { version = "^0.20", default-features = false, features = [ "dnssec" ] }
trust-dns-client = { version = "^0.20", default-features = false, features = [ "dnssec" ] }
yaml-rust = "*"
lazy_static = "1.4"
linked-hash-map = "0.5.4"
pnet_datalink = "^0.20.0"

[dev-dependencies]
rustc-serialize = "*"
timebomb = { git = "https://github.com/SAPikachu/timebomb.git" } 

[replace]

[lib]
name = "eulib"
path = "src/lib.rs"
